# Information-collection

./: .gitignore  ARCHITECTURE.md  PLAN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily_digest.yml  manual_test.yml  monthly_trends.yml  weekly_digest.yml
config/: categories.yaml  prompts.yaml  sources.yaml
data/: digest_history.json  seen_urls.json
data/curated_archive/: 2026-W26.json  2026-W27.json  2026-W28.json  2026-W29.json
src/: __init__.py  config.py  main.py
src/aggregator/: __init__.py  base.py  claude_plugins.py  coding_tools.py  framework_watch.py  github_trending.py  hacker_news.py  huggingface_papers.py  mcp_pulse.py  official_blogs.py  oss_models.py  product_hunt.py  rss_fetcher.py
src/curator/: __init__.py  deduplicator.py  llm_client.py  models.py  processor.py  ranker.py
src/digest/: __init__.py  composer.py  sender.py
src/digest/templates/: base.html  daily.html  monthly.html  weekly.html
src/state/: __init__.py  manager.py  schema.py
tests/: conftest.py
tests/test_curator/: test_deduplicator.py  test_ranker.py
