[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-information-collection"
version = "0.1.0"
description = "AI 信息聚合推送系统 — 自动抓取、策展、推送 AI 最新资讯和工具"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "AI Information Collector"}
]
readme = "README.md"
keywords = ["ai", "news", "digest", "email", "curation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
]

dependencies = [
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "openai>=1.50.0",
    "pydantic>=2.9.0",
    "PyYAML>=6.0.2",
    "Jinja2>=3.1.4",
    "aiosmtplib>=3.0.2",
    "thefuzz>=0.22.1",
    "python-dateutil>=2.9.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.32.0",
    "pytest-cov>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
    "llm: marks tests that call real LLM API (deselect with '-m \"not llm\"')",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__init__.py"]
